...
    
    @IBAction func selectAuthorPressed(_ sender: UIBarButtonItem) {
        createAuthorAlert()
    }
    
    private func createAuthorAlert() {
        let alert = UIAlertController(title: "Photographer", message: "Chose", preferredStyle: .actionSheet)
        
        for author in Photographers.allCases {
            alert.addAction(UIAlertAction(title: author.displayName, style: .default, handler: { (_) in
                self.author = author
                self.navigationItem.title = author.displayName
                self.resetCollectionView()
...
