...
                        <connections>
                            <outlet property="dataSource" destination="7eb-Jl-vno" id="pmR-K1-6ZS"/>
                            <outlet property="delegate" destination="8nV-Sw-2bH" id="jrW-Ld-i0h"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="{Photographer Name}" prompt="Photos" id="ulq-JA-i00">
                        <barButtonItem key="rightBarButtonItem" title="Author" id="bGf-sh-gxC">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="selectAuthorPressed:" destination="7eb-Jl-vno" id="Svl-ZJ-aRv"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
